--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <p>File Pengumuman: <strong>${data.skl}</strong></p>
         `;
       } else {
-        hasilDiv.innerHTML = "<p style='color: gray;'>Data tidak ditemukan. Periksa kembali NISN Anda.</p>";
+        hasilDiv.innerHTML = "<p style='color: gray;'>Data tidak ditemukan. Periksa kembali No. Pendaftaran Anda.</p>";
       }
     }
   </script>
